[project]
name = ""
version = ""
description = ""
authors = [
    {name = "pasmon", email = "no_reply@gmail.com"},
]
dependencies = [
    "pulumi>=3.0.0",
    "pulumi-kubernetes>=3.7.0",
    "pulumi-kubernetes-cert-manager>=0.0.1",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.python.org/pypi"
verify_ssl = true

[tool.pdm.dev-dependencies]
lint = [
    "yamllint>=1.26.3",
    "flake8>=4.0.1",
    "gitlint>=0.17.0",
    "pylint>=2.12.2",
]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
